Added correct links

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -175,7 +175,7 @@
     <hr>
 
     <header>
-      <a href="#API">API Friends List</a> |
+      <a href="/api/friends">API Friends List</a> |
       <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
     </header>
 
